Date -> Instant,  toList()